syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dexguitar/spacecraftory/shared/pkg/proto/common/v1;common_v1";

// Session represents a user session.
message Session {
    string uuid = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    google.protobuf.Timestamp expires_at = 4;
}
