package v1

import (
	"context"
	"fmt"
	"log"
	"net/http"
	"net/url"
	"time"

	corev3 "github.com/envoyproxy/go-control-plane/envoy/config/core/v3"
	authv3 "github.com/envoyproxy/go-control-plane/envoy/service/auth/v3"
	typev3 "github.com/envoyproxy/go-control-plane/envoy/type/v3"
	statusv3 "google.golang.org/genproto/googleapis/rpc/status"
	"google.golang.org/grpc/codes"

	"github.com/dexguitar/spacecraftory/iam/internal/service"
)

const (
	// Cookie/Header names –¥–ª—è –∏–∑–≤–ª–µ—á–µ–Ω–∏—è session UUID
	SessionCookieName    = "session_uuid"
	SessionCookieNameAlt = "X-Session-Uuid"

	// Headers –¥–ª—è –ø–µ—Ä–µ–¥–∞—á–∏ session UUID
	HeaderSessionUUID    = "session-uuid"
	HeaderSessionUUIDAlt = "x-session-uuid"
	HeaderAuthorization  = "authorization"
	HeaderCookie         = "cookie"

	// Headers –¥–ª—è –ø–µ—Ä–µ–¥–∞—á–∏ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ –≤ upstream
	HeaderUserUUID    = "x-user-uuid"
	HeaderUserLogin   = "x-user-login"
	HeaderUserEmail   = "x-user-email"
	HeaderSessionExp  = "x-session-expires"
	HeaderContentType = "content-type"
	HeaderAuthStatus  = "x-auth-status"

	ContentTypeJSON  = "application/json"
	AuthStatusDenied = "denied"
)

// API implements envoy.service.auth.v3.Authorization gRPC service
type API struct {
	authv3.UnimplementedAuthorizationServer
	authService service.AuthService
}

// NewAPI creates a new External Authorization API
func NewAPI(authService service.AuthService) *API {
	return &API{
		authService: authService,
	}
}

// Check implements the Envoy ext_authz Check method
func (a *API) Check(ctx context.Context, req *authv3.CheckRequest) (*authv3.CheckResponse, error) {
	log.Printf("üîê External Authorization Check called")

	// –ò–∑–≤–ª–µ–∫–∞–µ–º session UUID –∏–∑ –∑–∞–ø—Ä–æ—Å–∞
	sessionUUID, err := a.extractSessionUUID(req)
	if err != nil {
		log.Printf("‚ùå Session extraction failed: %v", err)
		return a.denyRequest("Missing or invalid session", typev3.StatusCode_Unauthorized), nil
	}

	log.Printf("üìã Extracted session_uuid: %s", sessionUUID)

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å–µ—Å—Å–∏—é —á–µ—Ä–µ–∑ WhoAmI
	session, user, err := a.authService.WhoAmI(ctx, sessionUUID)
	if err != nil {
		log.Printf("‚ùå WhoAmI failed: %v", err)
		return a.denyRequest("Invalid session", typev3.StatusCode_Forbidden), nil
	}

	log.Printf("‚úÖ Session valid for user: %s", user.Info.Login)

	// –í–æ–∑–≤—Ä–∞—â–∞–µ–º —É—Å–ø–µ—à–Ω—ã–π –æ—Ç–≤–µ—Ç —Å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–µ–π –æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ
	return a.allowRequest(user.UUID, user.Info.Login, user.Info.Email, session.ExpiresAt), nil
}

// extractSessionUUID –∏–∑–≤–ª–µ–∫–∞–µ—Ç session UUID –∏–∑ —Ä–∞–∑–ª–∏—á–Ω—ã—Ö –∏—Å—Ç–æ—á–Ω–∏–∫–æ–≤ –≤ –∑–∞–ø—Ä–æ—Å–µ
func (a *API) extractSessionUUID(req *authv3.CheckRequest) (string, error) {
	if req.Attributes == nil || req.Attributes.Request == nil || req.Attributes.Request.Http == nil {
		return "", fmt.Errorf("no HTTP request found")
	}

	headers := req.Attributes.Request.Http.Headers

	// 1. –ü—Ä–æ–≤–µ—Ä—è–µ–º –∑–∞–≥–æ–ª–æ–≤–æ–∫ session-uuid
	if sessionUUID, ok := headers[HeaderSessionUUID]; ok && sessionUUID != "" {
		return sessionUUID, nil
	}

	// 2. –ü—Ä–æ–≤–µ—Ä—è–µ–º –∑–∞–≥–æ–ª–æ–≤–æ–∫ x-session-uuid
	if sessionUUID, ok := headers[HeaderSessionUUIDAlt]; ok && sessionUUID != "" {
		return sessionUUID, nil
	}

	// 3. –ü—Ä–æ–≤–µ—Ä—è–µ–º Authorization Bearer token
	if authHeader, ok := headers[HeaderAuthorization]; ok && authHeader != "" {
		sessionUUID := a.extractBearerToken(authHeader)
		if sessionUUID != "" {
			return sessionUUID, nil
		}
	}

	// 4. –ü—Ä–æ–≤–µ—Ä—è–µ–º Cookie
	if cookieHeader, ok := headers[HeaderCookie]; ok && cookieHeader != "" {
		sessionUUID := a.extractSessionFromCookies(cookieHeader)
		if sessionUUID != "" {
			return sessionUUID, nil
		}
	}

	return "", fmt.Errorf("session uuid not found in request")
}

// extractBearerToken –∏–∑–≤–ª–µ–∫–∞–µ—Ç —Ç–æ–∫–µ–Ω –∏–∑ –∑–∞–≥–æ–ª–æ–≤–∫–∞ Authorization
func (a *API) extractBearerToken(authHeader string) string {
	const bearerPrefix = "Bearer "
	if len(authHeader) > len(bearerPrefix) && authHeader[:len(bearerPrefix)] == bearerPrefix {
		return authHeader[len(bearerPrefix):]
	}
	return ""
}

// extractSessionFromCookies –∏–∑–≤–ª–µ–∫–∞–µ—Ç session UUID –∏–∑ cookies
func (a *API) extractSessionFromCookies(cookieHeader string) string {
	req := &http.Request{Header: make(http.Header)}
	req.Header.Add("Cookie", cookieHeader)

	// –ü—Ä–æ–±—É–µ–º session_uuid
	if cookie, err := req.Cookie(SessionCookieName); err == nil {
		sessionUUID, err := url.QueryUnescape(cookie.Value)
		if err != nil {
			return cookie.Value
		}
		return sessionUUID
	}

	// –ü—Ä–æ–±—É–µ–º X-Session-Uuid
	if cookie, err := req.Cookie(SessionCookieNameAlt); err == nil {
		sessionUUID, err := url.QueryUnescape(cookie.Value)
		if err != nil {
			return cookie.Value
		}
		return sessionUUID
	}

	return ""
}

// allowRequest —Å–æ–∑–¥–∞–µ—Ç —É—Å–ø–µ—à–Ω—ã–π –æ—Ç–≤–µ—Ç —Å –∑–∞–≥–æ–ª–æ–≤–∫–∞–º–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func (a *API) allowRequest(userUUID, userLogin, userEmail string, expiresAt time.Time) *authv3.CheckResponse {
	headers := []*corev3.HeaderValueOption{
		{
			Header: &corev3.HeaderValue{
				Key:   HeaderUserUUID,
				Value: userUUID,
			},
		},
		{
			Header: &corev3.HeaderValue{
				Key:   HeaderUserLogin,
				Value: userLogin,
			},
		},
		{
			Header: &corev3.HeaderValue{
				Key:   HeaderUserEmail,
				Value: userEmail,
			},
		},
		{
			Header: &corev3.HeaderValue{
				Key:   HeaderSessionExp,
				Value: expiresAt.Format(time.RFC3339),
			},
		},
	}

	return &authv3.CheckResponse{
		Status: &statusv3.Status{Code: 0}, // OK
		HttpResponse: &authv3.CheckResponse_OkResponse{
			OkResponse: &authv3.OkHttpResponse{
				Headers: headers,
				// –£–¥–∞–ª—è–µ–º sensitive –∑–∞–≥–æ–ª–æ–≤–∫–∏ –∏–∑ upstream –∑–∞–ø—Ä–æ—Å–∞
				HeadersToRemove: []string{HeaderCookie, HeaderAuthorization},
			},
		},
	}
}

// denyRequest —Å–æ–∑–¥–∞–µ—Ç –æ—Ç–≤–µ—Ç —Å –æ—Ç–∫–∞–∑–æ–º –≤ –¥–æ—Å—Ç—É–ø–µ
func (a *API) denyRequest(message string, statusCode typev3.StatusCode) *authv3.CheckResponse {
	return &authv3.CheckResponse{
		Status: &statusv3.Status{Code: int32(codes.Unauthenticated)},
		HttpResponse: &authv3.CheckResponse_DeniedResponse{
			DeniedResponse: &authv3.DeniedHttpResponse{
				Status: &typev3.HttpStatus{
					Code: statusCode,
				},
				Body: fmt.Sprintf(`{"error": "%s", "timestamp": "%s"}`,
					message, time.Now().Format(time.RFC3339)),
				Headers: []*corev3.HeaderValueOption{
					{
						Header: &corev3.HeaderValue{
							Key:   HeaderContentType,
							Value: ContentTypeJSON,
						},
					},
					{
						Header: &corev3.HeaderValue{
							Key:   HeaderAuthStatus,
							Value: AuthStatusDenied,
						},
					},
				},
			},
		},
	}
}
